# local-ai-assistant

./: .env.example  .gitignore  Dockerfile  README.md  compress-source.sh  docker-compose.yml  pyproject.toml  update-and-restart.sh
deploy/: systemd.service
docs/: API.md  ARCHITECTURE.md  OPERATIONS.md  PRODUCTION_WAKE.md  REQUIREMENTS_TRACE.md  TEST_RESULTS.md
docs/reference/: ai_voice_assistant_full_integration_handoff_router_updated.md  voice_only_assistant_v1_design_requirements.md
src/voice_assistant/: __main__.py  app.py  assistant.py  audio.py  clients.py  commands.py  config.py  constants.py  conversation.py  health.py  maintenance.py  pocketsphinx_wake.py  state.py  telemetry.py  tts_voices.py  wake.py
tests/: conftest.py  test_admin_api.py  test_audio_playback_preparation.py  test_commands_and_conversation.py  test_config_and_clients.py  test_production_wake.py  test_runtime_flows.py  test_sound_event_configuration.py  test_tts_voices.py
tools/: generate_tts_sounds.sh
