[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-voice-assistant"
version = "1.0.0"
description = "Voice-only local wake-word assistant thin-client service"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Local Voice Assistant"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
  "aiofiles>=23.2",
  "Jinja2>=3.1"
]

[project.optional-dependencies]
wake-openwakeword = [
  "numpy>=1.26",
  "openwakeword>=0.6.0"
]
command-vosk = [
  "vosk>=0.3.45"
]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27"
]

[project.scripts]
voice-assistant = "voice_assistant.__main__:main"
voice-assistant-pocketsphinx-wake = "voice_assistant.pocketsphinx_wake:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
